--- a/HomeAccountant/HomeAccountant.UI/Pages/_Host.cshtml
+++ b/HomeAccountant/HomeAccountant.UI/Pages/_Host.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@using HomeAccountant.UI
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @namespace HomeAccountant.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
